export enum FinancialStatus {
    HEALTHY = 'healthy',
    MANAGEABLE = 'manageable',
    RISKY = 'risky',
    CLOSE_TO_BANKRUPTCY = 'close_to_bankruptcy',
    BANKRUPT = 'bankrupt',
}