export enum IncomeType {
    ACTIVE = 'active',
    PASSIVE = 'passive'
}