class Authentication {
  Authentication._();

  Authentication.create() : this._();
}
